<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/truque"
    tools:context=".ui.slideshow.SlideshowFragment2">
    <TextView
        android:id="@+id/text_slideshow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <ImageView
                android:id="@+id/iconImageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:layout_marginStart="-4dp"
                android:layout_marginLeft="-4dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@drawable/proteinas" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView1"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/iconImageView1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_nombre1"
                    android:textSize="16sp"
                    android:textStyle="normal|bold|italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_productos1"
                    android:textSize="10sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_contacto1"
                    android:textSize="9sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/viewPrecio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:layout_marginRight="49dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
            <ImageView
                android:id="@+id/iconImageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@drawable/higiene"
                android:layout_alignParentLeft="true"/>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView2"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/iconImageView2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_nombre2"
                    android:textSize="16sp"
                    android:textStyle="normal|bold|italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_productos2"
                    android:textSize="10sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_contacto1"
                    android:textSize="9sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/viewPrecio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:layout_marginRight="49dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
            <ImageView
                android:id="@+id/iconImageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@drawable/viveres"
                android:layout_alignParentLeft="true"/>
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView3"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/iconImageView3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_nombre3"
                    android:textSize="16sp"
                    android:textStyle="normal|bold|italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_productos3"
                    android:textSize="10sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_contacto1"
                    android:textSize="9sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/viewPrecio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:layout_marginRight="49dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
            <ImageView
                android:id="@+id/iconImageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                app:srcCompat="@drawable/utilees"
                android:layout_alignParentLeft="true"/>
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView4"
                android:orientation="vertical"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@+id/iconImageView4">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_nombre4"
                    android:textSize="16sp"
                    android:textStyle="normal|bold|italic" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_productos4"
                    android:textSize="10sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hin_contacto1"
                    android:textSize="9sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>
            <TextView
                android:id="@+id/viewPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="49dp"
                android:layout_marginRight="49dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>